[tool.poetry]
name = "kyotsu-backend"
version = "0.0.1"
description = ""
authors = ["Oleh Mazur <oleh@four-velocity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0"}
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
gunicorn = "^22.0.0"
inflection = "^0.5.1"
starlette-admin = "^0.13.2"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ipython = "^8.23.0"
alembic = "^1.13.1"
alembic-utils = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
